added group FEM values class with test and steady-state check for ending transient

--- a/doc/dissertation/content/high_order/EV_scalar.tex
+++ b/doc/dissertation/content/high_order/EV_scalar.tex
@@ -52,10 +52,10 @@ the faces of the cell $\cell$:
 where the jump $\entropyjump_F$ for a face $F$ measures the jump in the normal
 component of the entropy flux across the cell interface:
 \begin{equation}
-  \entropyjump_F(\approximatescalarsolution^\timeindex)
-  \equiv \|\mathbf{\consfluxletter}'(\approximatescalarsolution^\timeindex)
+  \entropyjump_F(\scalarsolution)
+  \equiv \|\mathbf{\consfluxletter}'(\scalarsolution)
     \cdot\normalvector_F
-  [\![\partial_n \entropy(\approximatescalarsolution^\timeindex)
+  [\![\partial_n \entropy(\scalarsolution)
   ]\!]\|_{L^\infty(F)} \eqc
 \end{equation}
 where $\normalvector_F$ is the outward unit vector for face $F$, the
