some work on jumps

--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -29,6 +29,11 @@ degree of freedom index, then the sum notation
 $\sum\limits_{j\in\mathcal{I}(\domain)}$ or $\sum\limits_{j=1}^N$ is shortened
 to $\sumj$.
 
+The notation $\mathbf{a}\otimes\mathbf{b}$ denotes a tensor product, otherwise
+known as an outer product, of column vectors $\mathbf{a}$ and $\mathbf{b}$,
+i.e., $\mathbf{a}\otimes\mathbf{b}\equiv\mathbf{a}\mathbf{b}^T$. Thus,
+$(\mathbf{a}\otimes\mathbf{b})\ij = a_i b_j$
+
 \begin{mytable}{Abbreviations Used in Dissertation}{abbreviations}{l l}
 {\emph{Abbreviation} & \emph{Description}}
 CG    & continuous Galerkin\\
