--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -205,6 +205,7 @@
 % miscellaneous
 \newcommand{\xt}{\pr{\x,\timevalue}}
 \newcommand{\divergence}{\nabla\cdot}
+\newcommand{\unitvector}[1]{\hat{\mathbf{e}}_#1}
 
 % command to highlight term in equation
 \newcommand{\highlightblue}[1]{
