--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -97,6 +97,7 @@ $\domainboundary$  & problem domain boundary\\
 
 % E-K
 %------------------------------------------------------------------------------
+$\unitvector{d}$   & unit vector for dimension $d$\\
 $\totalenergy$     & total energy density\\
 $\consfluxscalar$  & conservation law flux function for scalar case\\
 $\consfluxvector$  & conservation law flux function for vector case\\
