added doc content

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -10,7 +10,7 @@
 \subsection{The Burgers Equation}
 %  \input{content/preliminaries/burgers}
 \subsection{The Shallow Water Equations\label{sec:shallowwater}}
-%  \input{content/preliminaries/shallowwater}
+  \input{content/preliminaries/shallowwater}
 \subsection{The Euler Equations}
 %  \input{content/preliminaries/euler}
 %===============================================================================
