--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -11,6 +11,8 @@
 \newcommand{\velocity}{\mathbf{\speed}}
 \newcommand{\normalvectorletter}{n}
 \newcommand{\normalvector}{\mathbf{\normalvectorletter}}
+\newcommand{\normalx}{\normalvectorletter_x}
+\newcommand{\normaly}{\normalvectorletter_y}
 \newcommand{\ndimensions}{n_\text{dim}}
 
 % solution
