--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -120,17 +120,17 @@
   year = "1979",
 }
 
-@book{leveque02,
+@book{leveque2002,
 	author = "Randall J. LeVeque",
 	title = "Finite Volume Methods for Hyperbolic Problems",
 	year = "2002",
 	publisher = "Cambridge University Press"
 }
 
-@book{toro,
+@book{toro2009,
 	author = "Eleuterio F. Toro",
 	title = "Riemann Solvers and Numerical Methods for Fluid Dynamics",
-	year = "1999",
-	publisher = "Springer-Verlag",
-	edition = "2nd"
+	year = "2009",
+	publisher = "Springer-Verlag Berlin Heidelberg",
+	edition = "3rd"
 }
