--- a/doc/dissertation/content/discretization/shallowwater.tex
+++ b/doc/dissertation/content/discretization/shallowwater.tex
@@ -13,31 +13,76 @@ Integrating by parts gives
   - \intboundary{\testfunction_i^\height\tilde{\heightmomentum}\cdot\normalvector}
   \eqp
 \end{equation}
-Rearranging the momentum equation, substituting the approximate FEM
-solution and testing with a test function $\testfunction_i^{\heightmomentum}$
+Rearranging the $x$-momentum equation, substituting the approximate FEM solution
+and testing with a test function $\testfunction_i^{\heightmomentumx}$
 gives its weak form for degree of freedom $i$:
-\begin{equation}
-  \left(\testfunction_i^{\heightmomentum},\ppt{\tilde{\heightmomentum}}
-  \right)_\domain
-  = - \left(\testfunction_i^{\heightmomentum},\nabla\cdot
-    \left(\tilde{\heightmomentum}\otimes\tilde{\velocity}
-  + \frac{1}{2}\gravity\tilde{\height}^2\mathbf{I}\right)\right)_\domain
-  - \left(\testfunction_i^{\heightmomentum},
-    \gravity\tilde{\height}\nabla\bathymetry\right)_\domain \eqp
-\end{equation}
-Integrating by parts gives
 \begin{multline}
-  \left(\testfunction_i^{\heightmomentum},\ppt{\tilde{\heightmomentum}}
-  \right)_\domain
-  = \left(\nabla\testfunction_i^{\heightmomentum},
+  \intdomain{\testfunction_i^{\heightmomentumx}\ppt{\tilde{\heightmomentumx}}}
+  =
+  - \intdomain{\testfunction_i^{\heightmomentumx}
+      \pd{}{x}\pr{\frac{\tilde{\heightmomentumx}^2}{\height}
+      + \frac{1}{2}\gravity\tilde{\height}^2}}
+  \\
+  - \intdomain{\testfunction_i^{\heightmomentumx}
+      \pd{}{y}\pr{\frac{\tilde{\heightmomentumx}\tilde{\heightmomentumy}}
+        {\height}}}
+  - \intdomain{\testfunction_i^{\heightmomentumx}
+      \gravity\tilde{\height}\pd{\bathymetry}{x}}
+  \eqp
+\end{multline}
+Integrating by parts for the flux terms gives
+\begin{multline}
+  \intdomain{\testfunction_i^{\heightmomentumx}\ppt{\tilde{\heightmomentumx}}}
+  =
+    \intdomain{\pd{\testfunction_i^{\heightmomentumx}}{x}
+      \pr{\frac{\tilde{\heightmomentumx}^2}{\height}
+      + \frac{1}{2}\gravity\tilde{\height}^2}}
+  - \intboundary{\testfunction_i^{\heightmomentumx}
+      \pr{\frac{\tilde{\heightmomentumx}^2}{\height}
+      + \frac{1}{2}\gravity\tilde{\height}^2}\normalx}
+  \\
+  + \intdomain{\pd{\testfunction_i^{\heightmomentumx}}{y}
+      \frac{\tilde{\heightmomentumx}\tilde{\heightmomentumy}}
+        {\height}}
+  - \intboundary{\testfunction_i^{\heightmomentumx}
+      \frac{\tilde{\heightmomentumx}\tilde{\heightmomentumy}}
+        {\height}\normaly}
+  - \intdomain{\testfunction_i^{\heightmomentumx}
+      \gravity\tilde{\height}\pd{\bathymetry}{x}}
+  \eqp
+\end{multline}
+Applying the same procedure to the $y$-momentum equation gives
+\begin{multline}
+  \intdomain{\testfunction_i^{\heightmomentumy}\ppt{\tilde{\heightmomentumy}}}
+  =
+    \intdomain{\pd{\testfunction_i^{\heightmomentumy}}{x}
+      \frac{\tilde{\heightmomentumx}\tilde{\heightmomentumy}}{\height}}
+  - \intboundary{\testfunction_i^{\heightmomentumy}
+      \frac{\tilde{\heightmomentumx}\tilde{\heightmomentumy}}{\height}\normalx}
+  \\
+  + \intdomain{\pd{\testfunction_i^{\heightmomentumy}}{y}
+      \pr{\frac{\tilde{\heightmomentumy}^2}{\height}
+      + \frac{1}{2}\gravity\tilde{\height}^2}}
+  - \intboundary{\testfunction_i^{\heightmomentumy}
+      \pr{\frac{\tilde{\heightmomentumy}^2}{\height}
+      + \frac{1}{2}\gravity\tilde{\height}^2}\normaly}
+  - \intdomain{\testfunction_i^{\heightmomentumx}
+      \gravity\tilde{\height}\pd{\bathymetry}{x}}
+  \eqp
+\end{multline}
+In a more compact format, these two equations may be expressed as
+\begin{multline}
+  \intdomain{\testfunction_i^{\heightmomentum}\cdot\ppt{\tilde{\heightmomentum}}}
+  = \intdomain{\nabla\testfunction_i^{\heightmomentum}:
     \left(\tilde{\heightmomentum}\otimes\tilde{\velocity}
-    + \frac{1}{2}\gravity\tilde{\height}^2\mathbf{I}\right)\right)_\domain
-  \\- \left(\testfunction_i^{\heightmomentum},
+    + \frac{1}{2}\gravity\tilde{\height}^2\mathbf{I}\right)}
+  \\
+  - \intboundary{\testfunction_i^{\heightmomentum}\cdot
     \left(\tilde{\heightmomentum}\otimes\tilde{\velocity}
-    + \frac{1}{2}\gravity \tilde{\height}^2\mathbf{I}\right)\cdot\normalvector
-    \right)_{\domainboundary}
-  - \left(\testfunction_i^{\heightmomentum},
-    \gravity\tilde{\height}\nabla\bathymetry\right)_\domain \eqp
+    + \frac{1}{2}\gravity \tilde{\height}^2\mathbf{I}\right)\cdot\normalvector}
+  - \intdomain{\testfunction_i^{\heightmomentum}\cdot
+    \gravity\tilde{\height}\nabla\bathymetry}
+  \eqp
 \end{multline}
 This yields a discrete system
 \begin{equation}
