some work on doc

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -48,7 +48,8 @@
   \subsubsection{Entropy Viscosity for Scalar Conservation Law Equations
     \label{sec:entropy_viscosity_scalar}}
     \input{content/high_order/EV_scalar}
-  \subsubsection{Entropy Viscosity for the Shallow Water Equations}
+  \subsubsection{Entropy Viscosity for the Shallow Water Equations
+    \label{sec:shallowwater_entropy_viscosity}}
     \input{content/high_order/EV_shallowwater}
 \subsection{The High-Order System}
   \input{content/high_order/high_order_system}
